# mlops_scaffold

./: Dockerfile  Makefile  README.md  intro_concepts.ipynb  main.py  pyproject.toml  requirements.txt  sync_git.sh  test_main.py
.github/workflows/: devops.yml
docs/: README.md  cicd.md  mlops_best_practices.md
