[tool.poetry]
name = "mlops_scaffold"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wikipedia = "^1.4.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pylint = "^2.13.7"
black = "^22.3.0"
fire = "^0.4.0"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
textblob = "^0.17.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true